Correcting overlay z-index.

--- a/src/components/CollectionFilters/collectionFilters.scss
+++ b/src/components/CollectionFilters/collectionFilters.scss
@@ -8,7 +8,7 @@
 }
 
 .collection-filters-wrap {
-  z-index: 7;
+  z-index: 2;
   @include breakpoint('medium-') {
     padding-bottom: 0;
   }
