--- a/src/components/SearchInput/dropdownsMenu.scss
+++ b/src/components/SearchInput/dropdownsMenu.scss
@@ -64,7 +64,7 @@
     position: absolute;
     top: 60px;
     left: -10px;
-    z-index: 3;
+    z-index: 5;
 
     width: 200px;
     height: 300px;
